--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,13 +1,11 @@
 @media only screen and (max-width: 767px) {
-  .container {
-    width: 470px; }
   /*============================
 	=            home            =
 	============================*/
   .header-nav li {
     float: left;
     text-align: center;
-    width: 25%;
+    width: 33.33%;
     height: 100%;
     border-right: 1px solid #000; }
     .header-nav li:last-child {
@@ -42,6 +40,8 @@
   /*=====  End of contact  ======*/ }
 
 @media only screen and (max-width: 1000px) and (min-width: 768px) {
+  .header-img {
+    display: none; }
   .main-wrapper {
     margin: 50px 0; }
   .header figure {
@@ -50,7 +50,7 @@
       height: 675px; }
   .header-nav li {
     float: left;
-    width: 25%;
+    width: 33.33%;
     height: 100%;
     border-right: 1px solid #000; }
     .header-nav li:last-child {
@@ -70,6 +70,10 @@
       width: auto; } }
 
 @media only screen and (max-width: 1000px) {
+  .header-img {
+    display: none; }
+  .header-nav li {
+    width: 33.33%; }
   /*===============================
 	=            contact            =
 	===============================*/
