--- a/memorisation/css/main.css
+++ b/memorisation/css/main.css
@@ -1,21 +1,25 @@
+* {
+	box-sizing: border-box;
+}
+
+form {
+	height: 100%;
+}
 
 html {
 	height: 100%;
 	width: 100%;
-	border-top: 1px solid transparent;
-	display: table;
 }
 
 body {
 	background-image: -webkit-linear-gradient(top,  #A1B0D0, #C7D4E7);
 	background-image: linear-gradient(to bottom,  #A1B0D0, #C7D4E7);
 	color: #5F6888;
+	display: flex;
 	position: relative;
-	width: 100%;
+	justify-content: center;
+	align-items: center;
 	height: 100%;
-	border-top: 1px solid transparent;
-	display: table-cell;	
-	vertical-align: middle;
 }
 
 body:before {
@@ -40,6 +44,10 @@ a {
 ul {
 	padding: 0;
 	margin: 0;
+}
+
+li {
+	width: 100%;
 }
 [ng-click] {
 	cursor: pointer;
@@ -109,7 +117,6 @@ section {
 	z-index: 1;
 	width: 400px;
 	height: 450px;
-	margin: 0 auto;
 	background:  #E7E9EF;
 	padding: 20px;
 	border-radius: 5px;
@@ -124,12 +131,14 @@ input {
 }
 textarea {
 	width: 100%;
+	height: 80%;
 	margin: 20px 0 20px 0;
 	padding: 10px 15px;
 }
 .list-group-item {
 	padding: 0;
 	overflow: hidden;
+	font-size: 18px;
 }
 .list-group-item a {
 	overflow: hidden;
@@ -179,8 +188,14 @@ textarea {
 	border-radius: 5px;
 	box-shadow: 0 0 6px 0 #888;
 }
+
+.stack__item {
+	width: 100% !important;
+}
+
 .card .card-frontside {
 	height: 100%;
+	width: 100%;
 }
 .card-frontside {
 	height: 100%;
@@ -308,4 +323,23 @@ textarea {
 
 .interval form button {
 
+}
+
+/* --------------------------- Media Queries-----------------------------*/
+
+@media screen and (max-width: 500px) {
+	section {
+		height: 100%;
+		border-radius: 0;
+		box-shadow: none;
+		width: 100%;
+	}
+	button {
+		font-size: 18px !important;
+		padding: 9px 28px !important;
+	}
+	.card {
+		height: 100%;
+		width: 100%;
+	}
 }
