--- a/css/main.css
+++ b/css/main.css
@@ -347,7 +347,10 @@ p.intro-text {
 textarea.form-control {
   height: auto; }
 
-.btn-submit {
+.btn-top-container {
+  text-align: center; }
+
+.btn {
   border-radius: 17px;
   padding: 10px 25px;
   text-align: center;
@@ -360,10 +363,16 @@ textarea.form-control {
   bottom: -10px;
   -webkit-transition: 0.3s;
   transition: 0.3s; }
-  .btn-submit:hover {
+  .btn:hover {
     background: #333; }
-  .btn-submit:focus {
+  .btn:focus {
     outline: none; }
+  .btn-top {
+    display: inline-block;
+    margin: 20px auto;
+    position: relative;
+    top: -50px;
+    right: auto; }
 
 /*=================================
 =            Portfolio            =
