change skill color, add skype

--- a/css/main.css
+++ b/css/main.css
@@ -202,9 +202,9 @@ p.intro-text {
       height: 100%;
       width: 0; }
   .skill-con.skill-con-1 .progress {
-    border-color: #efefef; }
+    border-color: #E91E63; }
     .skill-con.skill-con-1 .progress .percentage {
-      background: #efefef; }
+      background: #E91E63; }
   .skill-con.skill-con-2 .progress {
     border-color: #cd5353; }
     .skill-con.skill-con-2 .progress .percentage {
