--- a/memorisation/css/main.css
+++ b/memorisation/css/main.css
@@ -142,6 +142,7 @@ section {
 	z-index: 1;
 	width: 400px;
 	height: 450px;
+	border: 2px solid #5F6888;
 	background:  #E7E9EF;
 	padding: 20px;
 	transition: 0.3s;
