--- a/memorisation/css/main.css
+++ b/memorisation/css/main.css
@@ -8,14 +8,13 @@ html {
 }
 
 body {
-	background-image: -webkit-linear-gradient(top,  #A1B0D0, #C7D4E7);
-	background-image: linear-gradient(to bottom,  #A1B0D0, #C7D4E7);
+	background-image: linear-gradient(to bottom,  #A1B0D0 0%, #C7D4E7 2000px);
 	color: #5F6888;
 	display: flex;
 	position: relative;
 	justify-content: center;
 	align-items: center;
-	height: 100%;
+	min-height: 100%;
 }
 
 body:before {
@@ -61,7 +60,7 @@ a:hover {
 	position: relative;
 	z-index: 0;
 	width: 400px;
-	height: 450px;
+	min-height: 450px;
 	background:  #E7E9EF;
 	border-radius: 5px;
 	box-shadow: 0 0 8px 0 #5F6888;
