--- a/memorisation/css/main.css
+++ b/memorisation/css/main.css
@@ -8,13 +8,13 @@ html {
 }
 
 body {
-	background-image: linear-gradient(to bottom,  #A1B0D0 0%, #C7D4E7 2000px);
+	background-image: linear-gradient(to bottom,  #A1B0D0, #C7D4E7);
 	color: #5F6888;
 	display: flex;
 	position: relative;
 	justify-content: center;
 	align-items: center;
-	min-height: 100%;
+	height: 100%;
 }
 
 body:before {
