--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
 /*----------  general  ----------*/
+:root {
+  --side-padding-section-desktop: 45px;
+  --side-padding-section-mobile: 20px;
+}
 body {
   background: #efefef; }
 
@@ -29,7 +33,7 @@ a {
 
 .section {
   background: #fff;
-  padding: 20px 45px 90px; }
+  padding: 20px var(--side-padding-section-desktop) 90px; }
 
 .nopadding-left {
   padding-left: 0; }
@@ -46,8 +50,8 @@ a {
     display: block;
     height: 1px;
     background: #efefef;
-    margin-right: -45px;
-    margin-left: -45px;
+    margin-right: calc(var(--side-padding-section-desktop) * -1);
+    margin-left: calc(var(--side-padding-section-desktop) * -1);
     margin-top: 10px; }
   .title:before {
     content: '';
